pulled eddited and pushed back

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>My project </h1>
-  adding something through git-hub
+  added something through the git-hub
+  pulled and pushed back to git-hub
   
 </body>
 </html>
