was ssh key added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>My project </h1>
-  added something through the git-hub
-  pulled and pushed back to git-hub
+  1 added something through the git-hub
+  2 pulled and pushed back to git-hub
+  3 created and added ssh key who da fuck knows whats that
   
 </body>
 </html>
